--- a/#source/scss/content.scss
+++ b/#source/scss/content.scss
@@ -227,15 +227,6 @@
 	font-size: 36px;
 	font-weight: 700;
 	letter-spacing: 5px;
-	&:after {
-		content: "";
-		position: absolute;
-		width: 100%;
-		height: 1.5px;
-		bottom: -3px;
-		left: 0;
-		background-color: #000;
-	}
 	@media (max-width: 500px) {
 		font-size: 28px;
 	}
@@ -534,6 +525,117 @@
 				content: "";
 				width: 125%;
 			}
+		}
+	}
+}
+
+//<PROFESSION> ==============================================
+
+.profession {
+	padding: 50px 0px;
+	background-color: rgba(235, 165, 74, 0.384);
+	text-align: center;
+	&__title {
+	}
+
+	&__wrap {
+	}
+
+	&__label {
+		margin: 40px 0px 20px 0px;
+		font-size: 24px;
+		letter-spacing: 1.5px;
+		font-weight: 700;
+	}
+
+	&__list {
+	}
+
+	&__text {
+		margin: 10px 0px;
+		font-size: 20px;
+		text-align: left;
+	}
+
+	&__sublabel {
+		margin: 50px 0px 20px 0px;
+		font-size: 24px;
+		letter-spacing: 1.5px;
+		font-weight: 700;
+	}
+
+	&__profession-slider {
+	}
+
+	&__bottom {
+	}
+
+	&__link {
+	}
+}
+.profession-slider {
+	display: flex;
+	position: relative;
+	padding: 0px 50px;
+	& {
+		.slick-arrow {
+			margin: -30px 135px 0 135px;
+			position: absolute;
+			top: 50%;
+			z-index: 10;
+			font-size: 0;
+			width: 40px;
+			height: 60px;
+		}
+		.slick-arrow.slick-prev {
+			left: 0;
+			background: url("../img/left-arrow.svg") 0 0 / 100% no-repeat;
+		}
+		.slick-arrow.slick-next {
+			right: 0;
+			background: url("../img/right-arrow.svg") 0 0 / 100% no-repeat;
+		}
+		.slick-arrow.slick-disabled {
+		}
+		.slick-dots {
+			position: absolute;
+			bottom: -40px;
+			left: 50%;
+			transform: translate(-50%, 0);
+			display: flex;
+		}
+		.slick-dots li {
+			list-style: none;
+			margin: 0px 7px;
+		}
+		.slick-dots li.slick-active button {
+			transition: all 0.5s ease 0s;
+			background-color: rgba(0, 0, 0, 0.473);
+		}
+		.slick-dots li button {
+			font-size: 0;
+			width: 12px;
+			height: 12px;
+			background-color: #000;
+			border-radius: 50%;
+		}
+	}
+	&__slide {
+	}
+
+	&__body {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	&__image {
+		flex: 0 1 700px;
+		& img {
+			width: 100%;
+		}
+		&_ex {
+			flex: 0 1 600px;
 		}
 	}
 }
