--- a/css/style.css
+++ b/css/style.css
@@ -478,14 +478,6 @@ html {
   font-size: 36px;
   font-weight: 700;
   letter-spacing: 5px; }
-  .title:after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 1.5px;
-    bottom: -3px;
-    left: 0;
-    background-color: #000; }
   @media (max-width: 500px) {
     .title {
       font-size: 28px; } }
@@ -738,3 +730,192 @@ html {
       .sections__title:after {
         content: "";
         width: 125%; } }
+
+.profession {
+  padding: 50px 0px;
+  background-color: rgba(235, 165, 74, 0.384);
+  text-align: center; }
+  .profession__label {
+    margin: 40px 0px 20px 0px;
+    font-size: 24px;
+    letter-spacing: 1.5px;
+    font-weight: 700; }
+  .profession__text {
+    margin: 10px 0px;
+    font-size: 20px;
+    text-align: left; }
+  .profession__sublabel {
+    margin: 50px 0px 20px 0px;
+    font-size: 24px;
+    letter-spacing: 1.5px;
+    font-weight: 700; }
+
+.profession-slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  padding: 0px 50px; }
+  .profession-slider .slick-arrow {
+    margin: -30px 135px 0 135px;
+    position: absolute;
+    top: 50%;
+    z-index: 10;
+    font-size: 0;
+    width: 40px;
+    height: 60px; }
+  .profession-slider .slick-arrow.slick-prev {
+    left: 0;
+    background: url("../img/left-arrow.svg") 0 0/100% no-repeat; }
+  .profession-slider .slick-arrow.slick-next {
+    right: 0;
+    background: url("../img/right-arrow.svg") 0 0/100% no-repeat; }
+  .profession-slider .slick-dots {
+    position: absolute;
+    bottom: -40px;
+    left: 50%;
+    -webkit-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .profession-slider .slick-dots li {
+    list-style: none;
+    margin: 0px 7px; }
+  .profession-slider .slick-dots li.slick-active button {
+    -webkit-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
+    background-color: rgba(0, 0, 0, 0.473); }
+  .profession-slider .slick-dots li button {
+    font-size: 0;
+    width: 12px;
+    height: 12px;
+    background-color: #000;
+    border-radius: 50%; }
+  .profession-slider__body {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+  .profession-slider__image {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 1 700px;
+    flex: 0 1 700px; }
+    .profession-slider__image img {
+      width: 100%; }
+    .profession-slider__image_ex {
+      -webkit-box-flex: 0;
+      -ms-flex: 0 1 600px;
+      flex: 0 1 600px; }
+
+.direction {
+  margin: 80px 0px 50px 0px;
+  text-align: center; }
+  .direction__breadcrumbs {
+    padding: 60px 0px 0px 0px; }
+  .direction__body {
+    margin: 70px 0px 0px 0px; }
+  .direction__text {
+    margin: 50px 0px 0px 0px;
+    text-align: left;
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: 1.5px; }
+    .direction__text span {
+      font-weight: 700; }
+  .direction__item {
+    margin: 100px 0px 0px 0px; }
+  .direction__label {
+    font-size: 22px;
+    line-height: 26px; }
+    .direction__label a {
+      position: relative;
+      color: #000;
+      font-weight: 700; }
+      .direction__label a:after {
+        content: "";
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 1.5px;
+        bottom: 2px;
+        left: 0;
+        background-color: #000;
+        -webkit-transition: all 0.6s ease 0s;
+        -o-transition: all 0.6s ease 0s;
+        transition: all 0.6s ease 0s; }
+      .direction__label a:hover:after {
+        -webkit-transition: all 0.3s ease 0s;
+        -o-transition: all 0.3s ease 0s;
+        transition: all 0.3s ease 0s;
+        opacity: 0; }
+  @media (max-width: 1070px) {
+    .direction {
+      margin: 60px 0px 50px 0px; }
+      .direction__body {
+        margin: 50px 0px 0px 0px; }
+      .direction__item {
+        margin: 50px 0px 0px 0px; } }
+  @media (max-width: 768px) {
+    .direction {
+      margin: 40px 0px 50px 0px; }
+      .direction__body {
+        margin: 40px 0px 0px 0px; }
+      .direction__title {
+        font-size: 30px; }
+      .direction__text {
+        margin: 35px 0px 0px 0px;
+        font-size: 22px; }
+      .direction__item {
+        margin: 40px 0px 0px 0px; } }
+  @media (max-width: 600px) {
+    .direction {
+      margin: 90px 0px 30px 0px; }
+      .direction__title {
+        font-size: 26px;
+        letter-spacing: normal; }
+      .direction__text {
+        margin: 45px 0px 0px 0px;
+        font-size: 18px;
+        text-align: center;
+        line-height: 28px;
+        letter-spacing: 0.5px; }
+      .direction__label {
+        font-size: 20px; } }
+  @media (max-width: 430px) {
+    .direction__title {
+      line-height: 30px; }
+    .direction__text {
+      margin: 20px 0px 0px 0px;
+      line-height: 26px; }
+    .direction__item {
+      margin: 35px 0px 0px 0px; } }
+
+.breadcrumbs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: left;
+  -ms-flex-pack: left;
+  justify-content: left;
+  font-size: 16px; }
+  .breadcrumbs__link a {
+    color: #585858;
+    font-weight: 700; }
+  .breadcrumbs span {
+    margin: 0px 3px; }
+  .breadcrumbs__text {
+    color: #969292; }
+  @media (max-width: 600px) {
+    .breadcrumbs {
+      display: none; } }
