--- a/#source/scss/content.scss
+++ b/#source/scss/content.scss
@@ -348,7 +348,7 @@
 		}
 	}
 	@media (max-width: 800px) {
-		padding: 30px 0px 50px 0px;
+		padding: 30px 0px 70px 0px;
 	}
 	@media (max-width: 768px) {
 		padding: 30px 0px 30px 0px;
@@ -535,6 +535,7 @@
 	padding: 50px 0px;
 	background-color: rgba(235, 165, 74, 0.384);
 	text-align: center;
+	overflow: hidden !important;
 	&__title {
 	}
 
@@ -555,6 +556,7 @@
 		margin: 10px 0px;
 		font-size: 20px;
 		text-align: left;
+		line-height: 24px;
 	}
 
 	&__sublabel {
@@ -568,9 +570,79 @@
 	}
 
 	&__bottom {
+		margin: 90px 0px 0px 0px;
+		font-size: 24px;
+		line-height: 28px;
 	}
 
 	&__link {
+		position: relative;
+		color: #000;
+		font-weight: 700;
+		&:after {
+			content: "";
+			display: block;
+			position: absolute;
+			width: 100%;
+			height: 1.5px;
+			bottom: 2px;
+			left: 0;
+			background-color: #000;
+			transition: all 0.6s ease 0s;
+		}
+		&:hover:after {
+			transition: all 0.3s ease 0s;
+			opacity: 0;
+		}
+	}
+	@media (max-width: 800px) {
+		padding: 30px 0px;
+		&__label {
+			margin: 30px 0px 15px 0px;
+		}
+		&__sublabel {
+			margin: 30px 0px 20px 0px;
+		}
+		&__bottom {
+			margin: 70px 0px 0px 0px;
+		}
+	}
+	@media (max-width: 500px) {
+		&__label {
+			font-size: 18px;
+			margin: 25px 0px 10px 0px;
+		}
+		&__text {
+			margin: 5px 0px;
+		}
+		&__sublabel {
+			margin: 20px 0px 15px 0px;
+			font-size: 20px;
+		}
+		&__bottom {
+			margin: 55px 0px 0px 0px;
+			font-size: 20px;
+			line-height: 24px;
+		}
+	}
+	@media (max-width: 410px) {
+		&__label {
+			margin: 18px 0px 7px 0px;
+			letter-spacing: normal;
+			font-size: 18px;
+			line-height: 22px;
+		}
+		&__text {
+			margin: 3px 0px;
+			font-size: 16px;
+			line-height: 20px;
+		}
+		&__sublabel {
+			margin: 15px 0px 10px 0px;
+		}
+		&__bottom {
+			margin: 45px 0px 0px 0px;
+		}
 	}
 }
 .profession-slider {
@@ -579,7 +651,7 @@
 	padding: 0px 50px;
 	& {
 		.slick-arrow {
-			margin: -30px 135px 0 135px;
+			margin: -30px 100px 0 100px;
 			position: absolute;
 			top: 50%;
 			z-index: 10;
@@ -630,12 +702,73 @@
 	}
 
 	&__image {
+		cursor: pointer;
 		flex: 0 1 700px;
 		& img {
 			width: 100%;
 		}
-		&_ex {
-			flex: 0 1 600px;
+	}
+	@media (max-width: 1150px) {
+		& {
+			.slick-arrow {
+				margin: -30px 50px 0 50px;
+			}
+		}
+	}
+	@media (max-width: 1000px) {
+		&__image {
+			flex: 0 1 500px;
+		}
+	}
+	@media (max-width: 800px) {
+		& {
+			.slick-arrow {
+				margin: -30px 30px 0 30px;
+			}
+			.slick-dots {
+				bottom: -40px;
+			}
+		}
+		&__image {
+			flex: 0 1 400px;
+		}
+	}
+	@media (max-width: 600px) {
+		& {
+			.slick-arrow {
+				margin: -30px 5px 0 5px;
+			}
+		}
+		&__image {
+			flex: 0 1 350px;
+		}
+	}
+	@media (max-width: 500px) {
+		& {
+			.slick-arrow {
+				margin: -30px 0px 0 0px;
+			}
+			.slick-dots {
+				bottom: -30px;
+			}
+		}
+		&__image {
+			flex: 0 1 300px;
+		}
+	}
+	@media (max-width: 410px) {
+		& {
+			.slick-dots {
+				bottom: -25px;
+			}
+		}
+		&__image {
+			flex: 0 1 250px;
+		}
+	}
+	@media (max-width: 350px) {
+		&__image {
+			flex: 0 1 200px;
 		}
 	}
 }
