--- a/#source/scss/content.scss
+++ b/#source/scss/content.scss
@@ -2,6 +2,7 @@
 .main {
 	background-color: rgba(199, 118, 156, 0.301);
 	padding: 150px 0px 70px 0px;
+	height: 100vh;
 	&__wrap {
 		display: flex;
 		flex-direction: column;
@@ -71,6 +72,9 @@
 		&__column {
 			padding: 0px 0px 0px 0px;
 		}
+	}
+	@media (max-width: 768px) {
+		height: auto;
 	}
 	@media (max-width: 710px) {
 		padding: 70px 0px 30px 0px;
