--- a/#source/scss/direction.scss
+++ b/#source/scss/direction.scss
@@ -1,5 +1,6 @@
 .direction {
-	margin: 80px 0px 50px 0px;
+	background-color: #eee;
+	padding: 80px 0px 50px 0px;
 	text-align: center;
 	&__breadcrumbs {
 		padding: 60px 0px 0px 0px;
@@ -22,9 +23,40 @@
 			font-weight: 700;
 		}
 	}
-
+	&__image {
+		margin: 50px 0px 0px 0px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	&__img {
+		flex: 0 1 300px;
+		& img {
+			width: 100%;
+		}
+	}
+	&__sublabel {
+		margin: 50px 0px 30px 0px;
+		font-size: 24px;
+		text-align: center;
+		line-height: 30px;
+		& span {
+			margin: 0px 0px 10px 0px;
+			display: block;
+			font-weight: 700;
+		}
+	}
+	&__video {
+		margin: 50px 0px 40px 0px;
+	}
 	&__item {
 		margin: 100px 0px 0px 0px;
+		&_pr {
+			margin: 60px 0px 0px 0px;
+		}
+		&_cor {
+			margin: 0px 0px 0px 0px;
+		}
 	}
 
 	&__label {
@@ -57,7 +89,10 @@
 			margin: 50px 0px 0px 0px;
 		}
 		&__item {
-			margin: 50px 0px 0px 0px;
+			margin: 75px 0px 0px 0px;
+			&_cor {
+				margin: 0px 0px 0px 0px;
+			}
 		}
 	}
 	@media (max-width: 768px) {
@@ -72,8 +107,34 @@
 			margin: 35px 0px 0px 0px;
 			font-size: 22px;
 		}
-		&__item {
+		&__sublabel {
+			margin: 30px 0px 20px 0px;
+			& span {
+				margin: 0px 0px 5px 0px;
+			}
+		}
+		&__image {
 			margin: 40px 0px 0px 0px;
+		}
+		&__img {
+			flex: 0 1 200px;
+			& img {
+				width: 100%;
+			}
+		}
+		&__video {
+			margin: 30px 0px 30px 0px;
+			width: 300px;
+			height: 300px;
+		}
+		&__item {
+			margin: 70px 0px 0px 0px;
+			&_pr {
+				margin: 40px 0px 0px 0px;
+			}
+			&_cor {
+				margin: 0px 0px 0px 0px;
+			}
 		}
 	}
 	@media (max-width: 600px) {
@@ -89,6 +150,13 @@
 			line-height: 28px;
 			letter-spacing: 0.5px;
 		}
+		&__sublabel {
+			font-size: 22px;
+			line-height: 28px;
+			& span {
+				margin: 0px 0px 5px 0px;
+			}
+		}
 		&__label {
 			font-size: 20px;
 		}
@@ -101,8 +169,36 @@
 			margin: 20px 0px 0px 0px;
 			line-height: 26px;
 		}
+		&__image {
+			margin: 30px 0px 0px 0px;
+		}
+		&__img {
+			flex: 0 1 150px;
+			& img {
+				width: 100%;
+			}
+		}
+		&__video {
+			margin: 20px 0px 20px 0px;
+			width: 250px;
+			height: 250px;
+		}
 		&__item {
-			margin: 35px 0px 0px 0px;
+			margin: 60px 0px 0px 0px;
+			&_pr {
+				margin: 30px 0px 0px 0px;
+			}
+			&_cor {
+				margin: 0px 0px 0px 0px;
+			}
+		}
+		&__sublabel {
+			margin: 20px 0px 10px 0px;
+			font-size: 20px;
+			line-height: 26px;
+			& span {
+				margin: 0px 0px 2px 0px;
+			}
 		}
 	}
 }
@@ -125,5 +221,124 @@
 	}
 	@media (max-width: 600px) {
 		display: none;
+	}
+}
+.direction-slider {
+	display: flex;
+	position: relative;
+	padding: 0px 50px;
+	& {
+		.slick-arrow {
+			margin: -30px 100px 0 100px;
+			position: absolute;
+			top: 50%;
+			z-index: 10;
+			font-size: 0;
+			width: 40px;
+			height: 60px;
+		}
+		.slick-arrow.slick-prev {
+			left: 0;
+			background: url("../img/left-arrow.svg") 0 0 / 100% no-repeat;
+		}
+		.slick-arrow.slick-next {
+			right: 0;
+			background: url("../img/right-arrow.svg") 0 0 / 100% no-repeat;
+		}
+		.slick-arrow.slick-disabled {
+		}
+		.slick-dots {
+			position: absolute;
+			bottom: -40px;
+			left: 50%;
+			transform: translate(-50%, 0);
+			display: flex;
+		}
+		.slick-dots li {
+			list-style: none;
+			margin: 0px 7px;
+		}
+		.slick-dots li.slick-active button {
+			transition: all 0.5s ease 0s;
+			background-color: rgba(0, 0, 0, 0.473);
+		}
+		.slick-dots li button {
+			font-size: 0;
+			width: 12px;
+			height: 12px;
+			background-color: #000;
+			border-radius: 50%;
+		}
+	}
+	&__slide {
+	}
+
+	&__body {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	&__image {
+		cursor: pointer;
+		flex: 0 1 450px;
+		& img {
+			width: 100%;
+		}
+		&_ex {
+			flex: 0 1 600px;
+		}
+	}
+	@media (max-width: 1070px) {
+		& {
+			.slick-arrow {
+				margin: -30px 40px 0 40px;
+			}
+		}
+	}
+	@media (max-width: 870px) {
+		& {
+			.slick-arrow {
+				margin: -30px 10px 0 10px;
+			}
+		}
+	}
+	@media (max-width: 768px) {
+		&__image {
+			flex: 0 1 350px;
+			& img {
+				width: 100%;
+			}
+			&_ex {
+				flex: 0 1 400px;
+			}
+		}
+	}
+	@media (max-width: 580px) {
+		& {
+			.slick-arrow {
+				margin: -30px 0px 0 0px;
+			}
+		}
+		&__image {
+			flex: 0 1 250px;
+			& img {
+				width: 100%;
+			}
+			&_ex {
+				flex: 0 1 300px;
+			}
+		}
+	}
+	@media (max-width: 430px) {
+		&__image {
+			flex: 0 1 250px;
+			& img {
+				width: 100%;
+			}
+			&_ex {
+				flex: 0 1 250px;
+			}
+		}
 	}
 }
