--- a/css/style.css
+++ b/css/style.css
@@ -285,7 +285,8 @@ html {
 
 .main {
   background-color: rgba(199, 118, 156, 0.301);
-  padding: 150px 0px 70px 0px; }
+  padding: 150px 0px 70px 0px;
+  height: 100vh; }
   .main__wrap {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -361,6 +362,9 @@ html {
       margin: 0px 0px 50px 0px; }
     .main__column {
       padding: 0px 0px 0px 0px; } }
+  @media (max-width: 768px) {
+    .main {
+      height: auto; } }
   @media (max-width: 710px) {
     .main {
       padding: 70px 0px 30px 0px; }
@@ -921,7 +925,8 @@ html {
       flex: 0 1 200px; } }
 
 .direction {
-  margin: 80px 0px 50px 0px;
+  background-color: #eee;
+  padding: 80px 0px 50px 0px;
   text-align: center; }
   .direction__breadcrumbs {
     padding: 60px 0px 0px 0px; }
@@ -935,8 +940,40 @@ html {
     letter-spacing: 1.5px; }
     .direction__text span {
       font-weight: 700; }
+  .direction__image {
+    margin: 50px 0px 0px 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+  .direction__img {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 1 300px;
+    flex: 0 1 300px; }
+    .direction__img img {
+      width: 100%; }
+  .direction__sublabel {
+    margin: 50px 0px 30px 0px;
+    font-size: 24px;
+    text-align: center;
+    line-height: 30px; }
+    .direction__sublabel span {
+      margin: 0px 0px 10px 0px;
+      display: block;
+      font-weight: 700; }
+  .direction__video {
+    margin: 50px 0px 40px 0px; }
   .direction__item {
     margin: 100px 0px 0px 0px; }
+    .direction__item_pr {
+      margin: 60px 0px 0px 0px; }
+    .direction__item_cor {
+      margin: 0px 0px 0px 0px; }
   .direction__label {
     font-size: 22px;
     line-height: 26px; }
@@ -967,7 +1004,9 @@ html {
       .direction__body {
         margin: 50px 0px 0px 0px; }
       .direction__item {
-        margin: 50px 0px 0px 0px; } }
+        margin: 75px 0px 0px 0px; }
+        .direction__item_cor {
+          margin: 0px 0px 0px 0px; } }
   @media (max-width: 768px) {
     .direction {
       margin: 40px 0px 50px 0px; }
@@ -978,8 +1017,28 @@ html {
       .direction__text {
         margin: 35px 0px 0px 0px;
         font-size: 22px; }
+      .direction__sublabel {
+        margin: 30px 0px 20px 0px; }
+        .direction__sublabel span {
+          margin: 0px 0px 5px 0px; }
+      .direction__image {
+        margin: 40px 0px 0px 0px; }
+      .direction__img {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 1 200px;
+        flex: 0 1 200px; }
+        .direction__img img {
+          width: 100%; }
+      .direction__video {
+        margin: 30px 0px 30px 0px;
+        width: 300px;
+        height: 300px; }
       .direction__item {
-        margin: 40px 0px 0px 0px; } }
+        margin: 70px 0px 0px 0px; }
+        .direction__item_pr {
+          margin: 40px 0px 0px 0px; }
+        .direction__item_cor {
+          margin: 0px 0px 0px 0px; } }
   @media (max-width: 600px) {
     .direction {
       margin: 90px 0px 30px 0px; }
@@ -992,6 +1051,11 @@ html {
         text-align: center;
         line-height: 28px;
         letter-spacing: 0.5px; }
+      .direction__sublabel {
+        font-size: 22px;
+        line-height: 28px; }
+        .direction__sublabel span {
+          margin: 0px 0px 5px 0px; }
       .direction__label {
         font-size: 20px; } }
   @media (max-width: 430px) {
@@ -1000,8 +1064,30 @@ html {
     .direction__text {
       margin: 20px 0px 0px 0px;
       line-height: 26px; }
+    .direction__image {
+      margin: 30px 0px 0px 0px; }
+    .direction__img {
+      -webkit-box-flex: 0;
+      -ms-flex: 0 1 150px;
+      flex: 0 1 150px; }
+      .direction__img img {
+        width: 100%; }
+    .direction__video {
+      margin: 20px 0px 20px 0px;
+      width: 250px;
+      height: 250px; }
     .direction__item {
-      margin: 35px 0px 0px 0px; } }
+      margin: 60px 0px 0px 0px; }
+      .direction__item_pr {
+        margin: 30px 0px 0px 0px; }
+      .direction__item_cor {
+        margin: 0px 0px 0px 0px; }
+    .direction__sublabel {
+      margin: 20px 0px 10px 0px;
+      font-size: 20px;
+      line-height: 26px; }
+      .direction__sublabel span {
+        margin: 0px 0px 2px 0px; } }
 
 .breadcrumbs {
   display: -webkit-box;
@@ -1024,3 +1110,110 @@ html {
   @media (max-width: 600px) {
     .breadcrumbs {
       display: none; } }
+
+.direction-slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  padding: 0px 50px; }
+  .direction-slider .slick-arrow {
+    margin: -30px 100px 0 100px;
+    position: absolute;
+    top: 50%;
+    z-index: 10;
+    font-size: 0;
+    width: 40px;
+    height: 60px; }
+  .direction-slider .slick-arrow.slick-prev {
+    left: 0;
+    background: url("../img/left-arrow.svg") 0 0/100% no-repeat; }
+  .direction-slider .slick-arrow.slick-next {
+    right: 0;
+    background: url("../img/right-arrow.svg") 0 0/100% no-repeat; }
+  .direction-slider .slick-dots {
+    position: absolute;
+    bottom: -40px;
+    left: 50%;
+    -webkit-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .direction-slider .slick-dots li {
+    list-style: none;
+    margin: 0px 7px; }
+  .direction-slider .slick-dots li.slick-active button {
+    -webkit-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
+    background-color: rgba(0, 0, 0, 0.473); }
+  .direction-slider .slick-dots li button {
+    font-size: 0;
+    width: 12px;
+    height: 12px;
+    background-color: #000;
+    border-radius: 50%; }
+  .direction-slider__body {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+  .direction-slider__image {
+    cursor: pointer;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 1 450px;
+    flex: 0 1 450px; }
+    .direction-slider__image img {
+      width: 100%; }
+    .direction-slider__image_ex {
+      -webkit-box-flex: 0;
+      -ms-flex: 0 1 600px;
+      flex: 0 1 600px; }
+  @media (max-width: 1070px) {
+    .direction-slider .slick-arrow {
+      margin: -30px 40px 0 40px; } }
+  @media (max-width: 870px) {
+    .direction-slider .slick-arrow {
+      margin: -30px 10px 0 10px; } }
+  @media (max-width: 768px) {
+    .direction-slider__image {
+      -webkit-box-flex: 0;
+      -ms-flex: 0 1 350px;
+      flex: 0 1 350px; }
+      .direction-slider__image img {
+        width: 100%; }
+      .direction-slider__image_ex {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 1 400px;
+        flex: 0 1 400px; } }
+  @media (max-width: 580px) {
+    .direction-slider .slick-arrow {
+      margin: -30px 0px 0 0px; }
+    .direction-slider__image {
+      -webkit-box-flex: 0;
+      -ms-flex: 0 1 250px;
+      flex: 0 1 250px; }
+      .direction-slider__image img {
+        width: 100%; }
+      .direction-slider__image_ex {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 1 300px;
+        flex: 0 1 300px; } }
+  @media (max-width: 430px) {
+    .direction-slider__image {
+      -webkit-box-flex: 0;
+      -ms-flex: 0 1 250px;
+      flex: 0 1 250px; }
+      .direction-slider__image img {
+        width: 100%; }
+      .direction-slider__image_ex {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 1 250px;
+        flex: 0 1 250px; } }
