--- a/#source/scss/direction.scss
+++ b/#source/scss/direction.scss
@@ -1,5 +1,4 @@
 .direction {
-	background-color: #eee;
 	padding: 80px 0px 50px 0px;
 	text-align: center;
 	&__breadcrumbs {
@@ -84,7 +83,7 @@
 		}
 	}
 	@media (max-width: 1070px) {
-		margin: 60px 0px 50px 0px;
+		padding: 60px 0px 50px 0px;
 		&__body {
 			margin: 50px 0px 0px 0px;
 		}
@@ -96,7 +95,7 @@
 		}
 	}
 	@media (max-width: 768px) {
-		margin: 40px 0px 50px 0px;
+		padding: 40px 0px 50px 0px;
 		&__body {
 			margin: 40px 0px 0px 0px;
 		}
@@ -138,7 +137,7 @@
 		}
 	}
 	@media (max-width: 600px) {
-		margin: 90px 0px 30px 0px;
+		padding: 50px 0px 30px 0px;
 		&__title {
 			font-size: 26px;
 			letter-spacing: normal;
@@ -162,6 +161,7 @@
 		}
 	}
 	@media (max-width: 430px) {
+		padding: 30px 0px;
 		&__title {
 			line-height: 30px;
 		}
