--- a/css/style.css
+++ b/css/style.css
@@ -924,8 +924,162 @@ html {
       -ms-flex: 0 1 200px;
       flex: 0 1 200px; } }
 
-.direction {
+.parents {
   background-color: #eee;
+  padding: 50px 0px;
+  text-align: center; }
+  .parents__body {
+    margin: 30px 0px 0px 0px; }
+  .parents__subtitle {
+    font-size: 28px;
+    letter-spacing: 1.5px;
+    line-height: 30px; }
+  .parents__wrapper {
+    margin: 30px -20px 30px -20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .parents__column {
+    padding: 0px 20px;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 1 50%;
+    flex: 0 1 50%;
+    text-align: center; }
+  .parents__item {
+    font-size: 18px;
+    line-height: 28px;
+    margin: 15px 0px;
+    letter-spacing: 0.5px;
+    font-weight: 700; }
+    .parents__item a {
+      color: #000;
+      border-bottom: 1px solid #000;
+      -webkit-transition: all 1s ease 0s;
+      -o-transition: all 1s ease 0s;
+      transition: all 1s ease 0s; }
+      .parents__item a:hover {
+        -webkit-transition: all 0.4s ease 0s;
+        -o-transition: all 0.4s ease 0s;
+        transition: all 0.4s ease 0s;
+        border-bottom: 1px solid #eee; }
+  .parents__links {
+    margin: 50px 0px 0px 0px;
+    text-align: left; }
+  .parents__box {
+    margin: 15px 0px; }
+  .parents__text {
+    font-size: 18px;
+    letter-spacing: 1px;
+    line-height: 26px; }
+  .parents__link {
+    color: #000;
+    font-weight: 700;
+    border-bottom: 1px solid #000;
+    -webkit-transition: all 1s ease 0s;
+    -o-transition: all 1s ease 0s;
+    transition: all 1s ease 0s; }
+    .parents__link:hover {
+      -webkit-transition: all 0.4s ease 0s;
+      -o-transition: all 0.4s ease 0s;
+      transition: all 0.4s ease 0s;
+      border-bottom: 1px solid #eee; }
+  @media (max-width: 800px) {
+    .parents {
+      padding: 30px 0px; }
+      .parents__subtitle {
+        font-size: 26px;
+        letter-spacing: 1px;
+        line-height: 28px; }
+      .parents__body {
+        margin: 20px 0px 0px 0px; }
+      .parents__wrapper {
+        margin: 20px -20px 30px -20px; }
+      .parents__links {
+        margin: 30px 0px 0px 0px; } }
+  @media (max-width: 650px) {
+    .parents__item {
+      margin: 10px 0px;
+      font-size: 16px; } }
+  @media (max-width: 687px) {
+    .parents__subtitle {
+      font-size: 24px;
+      letter-spacing: 0.5px;
+      line-height: 28px; }
+    .parents__wrapper {
+      margin: 10px -20px 0px -20px; }
+    .parents__links {
+      margin: 20px 0px 0px 0px; } }
+  @media (max-width: 530px) {
+    .parents__wrapper {
+      margin: 20px 0px 0px 0px;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+    .parents__column {
+      -webkit-box-flex: 0;
+      -ms-flex: 0 1 100%;
+      flex: 0 1 100%;
+      padding: 0px 0px 0px 0px; }
+      .parents__column:first-child {
+        margin: 0px 0px 10px 0px; }
+    .parents__item:first-child {
+      margin: 0px 0px 10px 0px; }
+    .parents__item:last-child {
+      margin: 10px 0px 0px 0px; } }
+  @media (max-width: 420px) {
+    .parents__subtitle {
+      font-size: 22px;
+      letter-spacing: normal; }
+    .parents__body {
+      margin: 15px 0px 0px 0px; }
+    .parents__wrapper {
+      margin: 15px 0px 0px 0px; }
+    .parents__text {
+      letter-spacing: 0.5px; } }
+
+.useful {
+  padding: 50px 0px;
+  text-align: center; }
+  .useful__body {
+    margin: 50px 0px 0px 0px;
+    text-align: left; }
+  .useful__text {
+    margin: 17px 0px;
+    font-size: 18px;
+    letter-spacing: 1px;
+    line-height: 26px; }
+    .useful__text:first-child {
+      margin: 0px 0px 17px 0px; }
+    .useful__text:last-child {
+      margin: 17px 0px 0px 0px; }
+  .useful__link {
+    color: #000;
+    font-weight: 700;
+    border-bottom: 1px solid #000;
+    -webkit-transition: all 1s ease 0s;
+    -o-transition: all 1s ease 0s;
+    transition: all 1s ease 0s; }
+    .useful__link:hover {
+      -webkit-transition: all 0.4s ease 0s;
+      -o-transition: all 0.4s ease 0s;
+      transition: all 0.4s ease 0s;
+      border-bottom: 1px solid #fff; }
+  @media (max-width: 800px) {
+    .useful {
+      padding: 30px 0px; }
+      .useful__body {
+        margin: 30px 0px 0px 0px; } }
+  @media (max-width: 420px) {
+    .useful__text {
+      margin: 12px 0px;
+      letter-spacing: 0.5px; } }
+
+.direction {
   padding: 80px 0px 50px 0px;
   text-align: center; }
   .direction__breadcrumbs {
@@ -1000,7 +1154,7 @@ html {
         opacity: 0; }
   @media (max-width: 1070px) {
     .direction {
-      margin: 60px 0px 50px 0px; }
+      padding: 60px 0px 50px 0px; }
       .direction__body {
         margin: 50px 0px 0px 0px; }
       .direction__item {
@@ -1009,7 +1163,7 @@ html {
           margin: 0px 0px 0px 0px; } }
   @media (max-width: 768px) {
     .direction {
-      margin: 40px 0px 50px 0px; }
+      padding: 40px 0px 50px 0px; }
       .direction__body {
         margin: 40px 0px 0px 0px; }
       .direction__title {
@@ -1041,7 +1195,7 @@ html {
           margin: 0px 0px 0px 0px; } }
   @media (max-width: 600px) {
     .direction {
-      margin: 90px 0px 30px 0px; }
+      padding: 50px 0px 30px 0px; }
       .direction__title {
         font-size: 26px;
         letter-spacing: normal; }
@@ -1059,35 +1213,37 @@ html {
       .direction__label {
         font-size: 20px; } }
   @media (max-width: 430px) {
-    .direction__title {
-      line-height: 30px; }
-    .direction__text {
-      margin: 20px 0px 0px 0px;
-      line-height: 26px; }
-    .direction__image {
-      margin: 30px 0px 0px 0px; }
-    .direction__img {
-      -webkit-box-flex: 0;
-      -ms-flex: 0 1 150px;
-      flex: 0 1 150px; }
-      .direction__img img {
-        width: 100%; }
-    .direction__video {
-      margin: 20px 0px 20px 0px;
-      width: 250px;
-      height: 250px; }
-    .direction__item {
-      margin: 60px 0px 0px 0px; }
-      .direction__item_pr {
+    .direction {
+      padding: 30px 0px; }
+      .direction__title {
+        line-height: 30px; }
+      .direction__text {
+        margin: 20px 0px 0px 0px;
+        line-height: 26px; }
+      .direction__image {
         margin: 30px 0px 0px 0px; }
-      .direction__item_cor {
-        margin: 0px 0px 0px 0px; }
-    .direction__sublabel {
-      margin: 20px 0px 10px 0px;
-      font-size: 20px;
-      line-height: 26px; }
-      .direction__sublabel span {
-        margin: 0px 0px 2px 0px; } }
+      .direction__img {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 1 150px;
+        flex: 0 1 150px; }
+        .direction__img img {
+          width: 100%; }
+      .direction__video {
+        margin: 20px 0px 20px 0px;
+        width: 250px;
+        height: 250px; }
+      .direction__item {
+        margin: 60px 0px 0px 0px; }
+        .direction__item_pr {
+          margin: 30px 0px 0px 0px; }
+        .direction__item_cor {
+          margin: 0px 0px 0px 0px; }
+      .direction__sublabel {
+        margin: 20px 0px 10px 0px;
+        font-size: 20px;
+        line-height: 26px; }
+        .direction__sublabel span {
+          margin: 0px 0px 2px 0px; } }
 
 .breadcrumbs {
   display: -webkit-box;
