--- a/#source/scss/content.scss
+++ b/#source/scss/content.scss
@@ -1,6 +1,6 @@
 //<MAIN> ==============================================
 .main {
-	background-color: rgba(199, 118, 156, 0.301);
+	background-color: rgba(199, 118, 156, 0.164);
 	padding: 150px 0px 70px 0px;
 	height: 100vh;
 	&__wrap {
@@ -144,6 +144,9 @@
 .about {
 	padding: 50px 0px;
 	text-align: center;
+	background: url("../img/about/bg.jpg") center no-repeat;
+	background-size: cover;
+	color: rgb(206, 206, 206);
 	&__title {
 	}
 	&__body {
@@ -167,7 +170,7 @@
 		font-size: 22px;
 		letter-spacing: 1.5px;
 		font-weight: 600;
-		border-bottom: 2px dashed #000;
+		border-bottom: 2px dashed rgb(206, 206, 206);
 	}
 
 	&__items {
@@ -239,7 +242,8 @@
 
 .portfolio {
 	padding: 50px 0px 70px 0;
-	background-color: antiquewhite;
+	background-color: rgba(54, 122, 177, 0.178);
+	background-color: rgba(61, 33, 46, 0.089);
 	text-align: center;
 	&__title {
 	}
@@ -430,7 +434,7 @@
 
 //<SECTIONS> ==============================================
 .sections {
-	background-color: rgba(0, 255, 255, 0.171);
+	//background-color: rgba(0, 255, 255, 0.171);
 	padding: 50px 0px;
 	text-align: center;
 	&__title {
@@ -464,7 +468,7 @@
 		display: inline-block;
 		font-size: 20px;
 		font-weight: 700;
-		color: rgb(175, 37, 102);
+		color: rgb(97, 5, 50);
 		&:after {
 			content: "";
 			position: absolute;
@@ -473,7 +477,7 @@
 			bottom: -3px;
 			left: 0;
 			transition: 0.5s ease 0s;
-			border-bottom: 2px dashed rgb(175, 37, 102);
+			border-bottom: 2px solid rgba(97, 5, 49, 0.486);
 		}
 		&:hover:after {
 			opacity: 0;
@@ -536,8 +540,11 @@
 //<PROFESSION> ==============================================
 
 .profession {
+	color: #fff;
 	padding: 50px 0px;
 	background-color: rgba(235, 165, 74, 0.384);
+	background: url("../img/profession/bg1.jpg") center no-repeat;
+	background-size: cover;
 	text-align: center;
 	overflow: hidden !important;
 	&__title {
@@ -581,7 +588,7 @@
 
 	&__link {
 		position: relative;
-		color: #000;
+		color: #fff;
 		font-weight: 700;
 		&:after {
 			content: "";
@@ -591,7 +598,7 @@
 			height: 1.5px;
 			bottom: 2px;
 			left: 0;
-			background-color: #000;
+			background-color: #fff;
 			transition: all 0.6s ease 0s;
 		}
 		&:hover:after {
@@ -926,6 +933,9 @@
 .useful {
 	padding: 50px 0px;
 	text-align: center;
+	background: url("../img/useful/bg1.jpg") center no-repeat;
+	background-size: cover;
+	color: #fff;
 	&__title {
 	}
 
@@ -948,13 +958,21 @@
 	}
 
 	&__link {
-		color: #000;
+		color: #fff;
 		font-weight: 700;
-		border-bottom: 1px solid #000;
-		transition: all 1s ease 0s;
-		&:hover {
-			transition: all 0.4s ease 0s;
-			border-bottom: 1px solid #fff;
+		position: relative;
+		&:after {
+			content: "";
+			transition: all 0.3s ease 0s;
+			position: absolute;
+			width: 100%;
+			height: 1px;
+			bottom: -2px;
+			left: 0;
+			background-color: #fff;
+		}
+		&:hover:after {
+			opacity: 0;
 		}
 	}
 	@media (max-width: 800px) {
@@ -967,6 +985,73 @@
 		&__text {
 			margin: 12px 0px;
 			letter-spacing: 0.5px;
+		}
+	}
+}
+
+//<CONTACTS> ==============================================
+.contacts {
+	background-color: rgba(0, 0, 0, 0.651);
+	text-align: center;
+	padding: 50px 0px;
+	&__title {
+		color: #fff;
+	}
+
+	&__top {
+		margin: 30px 0px 0px 0px;
+	}
+
+	&__label {
+		color: #fff;
+		font-size: 22px;
+		letter-spacing: 1px;
+	}
+
+	&__wrapper {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin: 50px -20px 0px -20px;
+	}
+
+	&__column {
+		flex: 0 1 33.333%;
+		padding: 0px 20px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		&_1 {
+		}
+
+		&_2 {
+		}
+
+		&_3 {
+		}
+	}
+
+	&__image {
+		margin: 0px 20px 0px 0px;
+	}
+
+	&__link {
+		font-size: 20px;
+		color: #fff;
+	}
+	@media (max-width: 770px) {
+		&__wrapper {
+			flex-wrap: wrap;
+		}
+		&__column {
+			margin: 20px 0px;
+			flex: 0 1 100%;
+			&:first-child {
+				margin: 0px 0px 20px 0px;
+			}
+			&:last-child {
+				margin: 20px 0px 0px 0px;
+			}
 		}
 	}
 }
