--- a/#source/scss/direction.scss
+++ b/#source/scss/direction.scss
@@ -1,6 +1,12 @@
 .direction {
 	padding: 80px 0px 50px 0px;
+	background: url("../img/direction/bg1.jpg") center no-repeat;
+	background-size: cover;
 	text-align: center;
+	color: rgb(206, 206, 206);
+	&_d {
+		height: 100vh;
+	}
 	&__breadcrumbs {
 		padding: 60px 0px 0px 0px;
 	}
@@ -63,7 +69,7 @@
 		line-height: 26px;
 		& a {
 			position: relative;
-			color: #000;
+			color: rgb(206, 206, 206);
 			font-weight: 700;
 			&:after {
 				content: "";
@@ -73,7 +79,7 @@
 				height: 1.5px;
 				bottom: 2px;
 				left: 0;
-				background-color: #000;
+				background-color: rgb(206, 206, 206);
 				transition: all 0.6s ease 0s;
 			}
 			&:hover:after {
@@ -138,6 +144,9 @@
 	}
 	@media (max-width: 600px) {
 		padding: 50px 0px 30px 0px;
+		&_p {
+			height: 100vh;
+		}
 		&__title {
 			font-size: 26px;
 			letter-spacing: normal;
