--- a/#source/scss/content.scss
+++ b/#source/scss/content.scss
@@ -669,11 +669,11 @@
 		}
 		.slick-arrow.slick-prev {
 			left: 0;
-			background: url("../img/left-arrow.svg") 0 0 / 100% no-repeat;
+			background: url("../img/arrow_l.png") 0 0 / 100% no-repeat;
 		}
 		.slick-arrow.slick-next {
 			right: 0;
-			background: url("../img/right-arrow.svg") 0 0 / 100% no-repeat;
+			background: url("../img/arrow_r.png") 0 0 / 100% no-repeat;
 		}
 		.slick-arrow.slick-disabled {
 		}
@@ -690,13 +690,13 @@
 		}
 		.slick-dots li.slick-active button {
 			transition: all 0.5s ease 0s;
-			background-color: rgba(0, 0, 0, 0.473);
+			background-color: rgba(238, 238, 238, 0.116);
 		}
 		.slick-dots li button {
 			font-size: 0;
 			width: 12px;
 			height: 12px;
-			background-color: #000;
+			background-color: #eee;
 			border-radius: 50%;
 		}
 	}
@@ -990,7 +990,7 @@
 .contacts {
 	background-color: #fff;
 	text-align: center;
-	padding: 50px 0px;
+	padding: 50px 0px 0px 0px;
 	color: #000;
 	&__title {
 	}
@@ -1008,6 +1008,18 @@
 	}
 	&__bottom {
 		margin: 50px 0px 0px 0px;
+	}
+	@media (max-width: 800px) {
+		padding: 30px 0px 0px 0px;
+		&__top {
+			margin: 20px 0px 0px 0px;
+		}
+	}
+	@media (max-width: 768px) {
+		&__label {
+			font-size: 20px;
+			line-height: 26px;
+		}
 	}
 }
 
@@ -1052,6 +1064,9 @@
 			top: 3px;
 			box-shadow: 0px 0px 0 rgb(131, 69, 97);
 		}
+	}
+	@media (max-width: 800px) {
+		margin: 30px 0px 0px 0px;
 	}
 }
 .options {
