--- a/#source/scss/direction.scss
+++ b/#source/scss/direction.scss
@@ -4,9 +4,6 @@
 	background-size: cover;
 	text-align: center;
 	color: rgb(206, 206, 206);
-	&_d {
-		height: 100vh;
-	}
 	&__breadcrumbs {
 		padding: 60px 0px 0px 0px;
 	}
@@ -61,6 +58,9 @@
 		}
 		&_cor {
 			margin: 0px 0px 0px 0px;
+		}
+		&_diagn {
+			margin: 60px 0px 0px 0px;
 		}
 	}
 
@@ -140,6 +140,9 @@
 			&_cor {
 				margin: 0px 0px 0px 0px;
 			}
+			&_diagn {
+				margin: 40px 0px 0px 0px;
+			}
 		}
 	}
 	@media (max-width: 600px) {
@@ -169,8 +172,13 @@
 			font-size: 20px;
 		}
 	}
+	@media (max-width: 490px) {
+	}
 	@media (max-width: 430px) {
 		padding: 30px 0px;
+		&_d {
+			height: 100vh;
+		}
 		&__title {
 			line-height: 30px;
 		}
@@ -200,6 +208,9 @@
 			&_cor {
 				margin: 0px 0px 0px 0px;
 			}
+			&_diagn {
+				margin: 30px 0px 0px 0px;
+			}
 		}
 		&__sublabel {
 			margin: 20px 0px 10px 0px;
@@ -208,6 +219,11 @@
 			& span {
 				margin: 0px 0px 2px 0px;
 			}
+		}
+	}
+	@media (max-width: 375px) {
+		&_d {
+			height: auto;
 		}
 	}
 }
@@ -248,11 +264,11 @@
 		}
 		.slick-arrow.slick-prev {
 			left: 0;
-			background: url("../img/left-arrow.svg") 0 0 / 100% no-repeat;
+			background: url("../img/arrow_l.png") 0 0 / 100% no-repeat;
 		}
 		.slick-arrow.slick-next {
 			right: 0;
-			background: url("../img/right-arrow.svg") 0 0 / 100% no-repeat;
+			background: url("../img/arrow_r.png") 0 0 / 100% no-repeat;
 		}
 		.slick-arrow.slick-disabled {
 		}
@@ -269,13 +285,13 @@
 		}
 		.slick-dots li.slick-active button {
 			transition: all 0.5s ease 0s;
-			background-color: rgba(0, 0, 0, 0.473);
+			background-color: rgba(238, 238, 238, 0.116);
 		}
 		.slick-dots li button {
 			font-size: 0;
 			width: 12px;
 			height: 12px;
-			background-color: #000;
+			background-color: #eee;
 			border-radius: 50%;
 		}
 	}
